chore: add labels to k8s deployments

--- a/deploy/kubernetes/sqlserver.yml
+++ b/deploy/kubernetes/sqlserver.yml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sqlserver
+  labels:
+    app: sqlserver
 spec:
   selector:
     matchLabels:
