--- a/deploy/kubernetes/nginx.yml
+++ b/deploy/kubernetes/nginx.yml
@@ -4,6 +4,8 @@ metadata:
   name: nginx
   labels:
     app: nginx
+  annotations:
+    litmuschaos.io/chaos: "true"
 spec:
   selector:
     matchLabels:
@@ -12,6 +14,8 @@ spec:
     metadata:
       labels:
         app: nginx
+      annotations:
+        litmuschaos.io/chaos: "true"
     spec:
       containers:
         - name: nginx
