--- a/deploy/kubernetes/backend.yml
+++ b/deploy/kubernetes/backend.yml
@@ -22,7 +22,7 @@ spec:
               memory: "128Mi"
               cpu: "200m"
           ports:
-            - name: web
+            - name: http
               containerPort: 80
 ---
 apiVersion: v1
@@ -35,6 +35,6 @@ spec:
   selector:
     app: backend
   ports:
-    - name: web
+    - name: http
       port: 80
       targetPort: 80
